# ACCULINNA_go4_user_library

./: CMakeLists.txt  Doxyfile  README.md  compile.sh  doclean.sh  env.sh  run.sh  run_parallel.sh  setup.C  showEnv.sh
auxiliary/: Boilerplate.txt  CMakeLists.txt.bak  chcounttest.c  code_backup.cpp  code_backup_2.cpp  debug.command  errors.txt  errors2.txt  nm_output.txt  test.cxx
base/: CMakeLists.txt  Support.cxx  Support.h
data/: CMakeLists.txt  DataLinkDef.h  DetEventCommon.cxx  DetEventCommon.h  DetEventDetector.cxx  DetEventDetector.h  DetEventFull.cxx  DetEventFull.h  DetEventStation.cxx  DetEventStation.h  DetMessage.cxx  DetMessage.h  RawMessage.cxx  RawMessage.h
docu/: ACCULINNA_DAQ.odp  DAQ_ER_diagram.odp
go4pieces/: CMakeLists.txt  Go4piecesLinkDef.h  TGo4CompositeEvent.cxx  TGo4CompositeEvent.h  TGo4EventElement.cxx  TGo4EventSource.cxx  TGo4EventSource.h  TGo4LockGuard.cxx  TGo4LockGuard.h  TGo4Log.cxx  TGo4Log.h
macros/: analyse.C  analyse2.C  analyse4.C  analyze4Loop.sh  convert.C  rootlogon.C  run_reader.C
reader/: CMakeLists.txt  Reader.cxx  Reader.h  ReaderLinkDef.h
setupconfig/: CMakeLists.txt  SetupConfigLinkDef.h  commonxml.cpp  functions.cpp  functions_electr.cpp  main.cpp  xmlparsing.cpp  xmlparsing_electr.cpp
setupconfig/obsolete/: CMakeLists_cpp.txt  SetupConfig.cxx  SetupConfig.h  SetupConfigLinkDef.h  setupconfig_test.cpp  stc_mapping.h
setupconfig/pureC/: Makefile  commonxml.c  commonxml.h  enutag.h  functions.c  functions.h  functions_electr.c  functions_electr.h  main.c  setup.xml  structs.h  structs_electr.h  xmlparsing.c  xmlparsing.h  xmlparsing_electr.c  xmlparsing_electr.h
setupconfigcppwrapper/: CMakeLists.txt  ElectronicsChars.cxx  ElectronicsChars.h  SetupConfigCppWrapperLinkDef.h  SetupConfiguration.cxx  SetupConfiguration.h
tests/: CMakeLists.txt  setupConfigCppTest.cpp
useranalysis/: CMakeLists.txt  Support.h  UserAnalysis.cxx  UserAnalysis.h  UserAnalysisLinkDef.h  UserParameter.cxx  UserParameter.h
useranalysis/advmonitoring/: UserEventAdvMonitoring.cxx  UserEventAdvMonitoring.h  UserHistosAdvMonitoring.cxx  UserHistosAdvMonitoring.h  UserProcAdvMonitoring.cxx  UserProcAdvMonitoring.h  UserProcAdvMonitoring_reservedCopy.cxx
useranalysis/beamdetmonitoring/: UserEventBeamDetMonitoring.cxx  UserEventBeamDetMonitoring.h  UserHistosBeamDetMonitoring.cxx  UserHistosBeamDetMonitoring.h  UserParamBeamDetMonitoring.cxx  UserParamBeamDetMonitoring.h  UserProcBeamDetMonitoring.cxx  UserProcBeamDetMonitoring.h
useranalysis/beammonitoring/: UserEventBeamMonitoring.cxx  UserEventBeamMonitoring.h  UserHistosBeamMonitoring.cxx  UserHistosBeamMonitoring.h  UserProcBeamMonitoring.cxx  UserProcBeamMonitoring.h
useranalysis/beammonitoring2/: UserEventBeamMonitoring2.cxx  UserEventBeamMonitoring2.h  UserHistosBeamMonitoring2.cxx  UserHistosBeamMonitoring2.h  UserParameterBeamDetector.cxx  UserParameterBeamDetector.h  UserProcBeamMonitoring2.cxx  UserProcBeamMonitoring2.h
useranalysis/calibration/: SiCalibPars.cxx  SiCalibPars.h
useranalysis/calibration/parameters/: CsI.cal  CsI_R.cal  DSDX_C.cal  DSDX_L.cal  DSDX_R.cal  DSDY_C.cal  DSDY_L.cal  DSDY_R.cal  SQX_L.cal  SQX_R.cal  SQY_L.cal  SQY_R.cal  SSD20_L.cal  SSD20_R.cal  SSDY_R.cal  SSD_L.cal  SSD_R.cal  tSQX_L.cal  tSQY_L.cal  thicknessLeft.root
useranalysis/data/: BeamDetMWPCDigi.cxx  BeamDetMWPCDigi.h  DetEventCommon.cxx  DetEventCommon.h  DetEventDetector.cxx  DetEventDetector.h  DetEventFull.cxx  DetEventFull.h  DetEventStation.cxx  DetEventStation.h  DetMessage.cxx  DetMessage.h  RawMessage.cxx
useranalysis/data_events/: UserEventAnnularTele.cxx  UserEventAnnularTele.h  UserEventBeamDetMwpc.cxx  UserEventBeamDetMwpc.h  UserEventBeamDetTof.cxx  UserEventBeamDetTof.h  UserEventLeftTele.cxx  UserEventLeftTele.h  UserEventNeutronDet.cxx  UserEventNeutronDet.h  UserEventNew.cxx  UserEventNew.h  UserEventRightTele.cxx  UserEventRightTele.h
useranalysis/digibuilding/: UserEventDigiBuilding.cxx  UserEventDigiBuilding.h  UserProcDigiBuilding.cxx  UserProcDigiBuilding.h
useranalysis/learn/: UserEventLearn.cxx  UserEventLearn.h  UserProcLearn.cxx  UserProcLearn.h
useranalysis/mesh/: MeshDummyEvent.cxx  MeshDummyEvent.h  MeshProviderProc.cxx  MeshProviderProc.h
useranalysis/monitoring/: DetEventFull.cxx  DetEventFull.h  UserEventMonitoring.cxx  UserEventMonitoring.h  UserHistosMonitoring.cxx  UserHistosMonitoring.h  UserProcMonitoring.cxx  UserProcMonitoring.h
useranalysis/output_root_streamer/: OutputRootStreamer.cxx  OutputRootStreamer.h
useranalysis/rawmonitoring/: UserEventRawMonitoring.cxx  UserEventRawMonitoring.h  UserHistosRawMonitoring.cxx  UserHistosRawMonitoring.h  UserProcRawMonitoring.cxx  UserProcRawMonitoring.h
useranalysis/repacking/: RootStore.cxx  RootStore.h  UserEventRepacking.cxx  UserEventRepacking.h  UserHistosRepacking.cxx  UserHistosRepacking.h  UserProcRepacking.cxx  UserProcRepacking.h
useranalysis/step2/: UserEventStep2.cxx  UserEventStep2.h  UserProcStep2.cxx  UserProcStep2.h
useranalysis/testmonitoring/: UserEventTestMonitoring.cxx  UserEventTestMonitoring.h  UserHistosTestMonitoring.cxx  UserHistosTestMonitoring.h  UserParameterTest.cxx  UserParameterTest.h  UserProcTestMonitoring.cxx  UserProcTestMonitoring.h
useranalysis/unpacking/: UserEventUnpacking.cxx  UserEventUnpacking.h  UserHistosUnpacking.cxx  UserHistosUnpacking.h  UserProcUnpacking.cxx  UserProcUnpacking.h
usr/: electronics.xml  electronics2.xml  myXML.xml  setup.xml  setup2_exp201803.xml  setup2_exp201804.xml  setup2_exp201811.xml  setup_example.xml  setup_exp201803.xml  setup_exp201804.xml  setup_exp201805.xml
